Fix hr uneven margin

--- a/themes/accujazz/static/css/style.css
+++ b/themes/accujazz/static/css/style.css
@@ -127,6 +127,7 @@ hr {
 	text-align: center;
 	height: 1px;
 	width: 100%;
+	margin-bottom: 20px;
 }
 
 span.date-list {
